--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   </div>
                   <div class="hc-details">
                     <span class="hc-heading">Write Email</span>
-                    <span class="hc-content"><a href="mailto:info@company.com">info@comkkggjpany.com</a></span>
+                    <span class="hc-content"><a href="mailto:info@company.com">info@bjhvhj.com</a></span>
                   </div>
                 </div>
                 <div class="hc-wrap">
