--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
                 <h3 class="sb-title"><a href="services.html">Quality Theraphy</a></h3>
                 <p class="sb-excerpt">
-                  Lorem ipsu dolor sit am adipi we help you ensur everyone to understand logic.
+                  Quality therapy involves a collaborative and empathetic relationship between the therapist and client, based on mutual trust, respect, and openness.
                 </p>
               </div>
               <div class="sb-image">
