--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 </div>
                 <h3 class="sb-title"><a href="services.html">Couple Theraphy</a></h3>
                 <p class="sb-excerpt">
-                  Lorem ipsu dolor sit am adipi we help you ensur everyone to understand logic.
+                  Therapy that involves a therapist working with a small group of individuals who share similar issues or concerns.
                 </p>
               </div>
               <div class="sb-image">
@@ -312,7 +312,7 @@
                 </div>
                 <h3 class="sb-title"><a href="services.html">Group Therapy</a></h3>
                 <p class="sb-excerpt">
-                  Lorem ipsu dolor sit am adipi we help you ensur everyone to understand logic.
+                  Therapy that focuses on improving communication and resolving conflicts between romantic partners.
                 </p>
               </div>
               <div class="sb-image">
