--- a/index.html
+++ b/index.html
@@ -345,8 +345,7 @@
                 <h2 class="section-title">We’re the leading advisory
                   center for you</h2>
               </div>
-              <p class="about-text">Lorem ipsum is simply free text dolor sit amet, consectetur notted adipisicing elit
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua lonm andhn but also the leap into electronic typesetting.</p>
+              <p class="about-text">Our platform is dedicated to providing information, resources, and support for individuals who are seeking to improve their mental health and well-being. We believe that mental health is just as important as physical health, and we strive to promote awareness and understanding of mental health issues through our articles, guides through our services.</p>
               <div class="row pt-45 pb-45">
                 <div class="col-md-6 mb-xs-30">
                   <h4 class="title-md">Online Counseling</h4>
