--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                           <i class="icon-depression"></i>
                         </div>
                         <h3 class="service-title"><a href="single-service.html">Depression Problem</a></h3>
-                        <p class="service-excerpt">Lorem ipsu dolor sit am adipi help you ensur everyone.</p>
+                        <p class="service-excerpt">professional help such as therapy or medication, practicing self-care activities like exercise, healthy eating, and getting enough rest</p>
                         <div class="service-readmore">
                           <a href="single-service.html" class="readmore-text"><span>Read More</span> </a>
                           <a href="single-service.html" class="readmore-icon"><span><i
@@ -470,7 +470,7 @@
                           <i class="icon-meeting"></i>
                         </div>
                         <h3 class="service-title"><a href="single-service.html">Personal Meeting</a></h3>
-                        <p class="service-excerpt">Lorem ipsu dolor sit am adipi help you ensur everyone.</p>
+                        <p class="service-excerpt">opportunity to connect face-to-face with another individual or group in a more intimate and direct way than other forms of communication</p>
                         <div class="service-readmore">
                           <a href="single-service.html" class="readmore-text"><span>Read More</span> </a>
                           <a href="single-service.html" class="readmore-icon"><span><i
@@ -491,7 +491,7 @@
                           <i class="icon-couple"></i>
                         </div>
                         <h3 class="service-title"><a href="single-service.html">Couple Counseling</a></h3>
-                        <p class="service-excerpt">Lorem ipsu dolor sit am adipi help you ensur everyone.</p>
+                        <p class="service-excerpt">Therapy that involves a therapist working with a small group of individuals who share similar issues or concerns.</p>
                         <div class="service-readmore">
                           <a href="single-service.html" class="readmore-text"><span>Read More</span> </a>
                           <a href="single-service.html" class="readmore-icon"><span><i
